Bug 440400 - High priority of Canvas-Only mode floating message will hide more practically relevant floating messages such as zoom and rotation
Summary: High priority of Canvas-Only mode floating message will hide more practically...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 4.4.5
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-07-30 02:27 UTC by tomtomtomreportingin
Modified: 2022-09-20 09:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tomtomtomreportingin 2021-07-30 02:27:43 UTC
SUMMARY
For a short time after entering Canvas-Only mode, the floating message hint will hide more practically relevant information from lesser priority floating messages, such as zoom status. As the user becomes more experienced with Krita, this hint becomes hindering to the user's workflow.

STEPS TO REPRODUCE
1. Enter Canvas-Only mode by pressing Tab.
2. Zoom in swiftly after.

OBSERVED RESULT
Zoom status doesn't show up as the higher priority of the Canvas-Only hint overrides it.

EXPECTED RESULT
It would be nice if there was an option to just disable this specfic floating message from showing up, assuming lowering its priority isn't desirable.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Debian sid
KDE Plasma Version: 5.20.5
KDE Frameworks Version: 5.78.0
Qt Version: 5.12.9 (Appimage)
Comment 1 Ahab Greybeard 2021-07-30 13:08:41 UTC
That 'now in Canvas-Only mode' message stays there for about four seconds which is a long time.
Comment 2 Halla Rempt 2022-09-20 09:31:44 UTC
Git commit fd4a67f848b6d1b4b9e805d10d337a052afd54fc by Halla Rempt.
Committed on 20/09/2022 at 09:31.
Pushed by rempt into branch 'master'.

Make the canvas-only message low priority

M  +3    -1    libs/ui/KisViewManager.cpp

https://invent.kde.org/graphics/krita/commit/fd4a67f848b6d1b4b9e805d10d337a052afd54fc
Comment 3 Halla Rempt 2022-09-20 09:32:01 UTC
Git commit c02ac9f076df31e59b4efb105665938bfc9affe4 by Halla Rempt.
Committed on 20/09/2022 at 09:31.
Pushed by rempt into branch 'krita/5.1'.

Make the canvas-only message low priority
(cherry picked from commit fd4a67f848b6d1b4b9e805d10d337a052afd54fc)

M  +3    -1    libs/ui/KisViewManager.cpp

https://invent.kde.org/graphics/krita/commit/c02ac9f076df31e59b4efb105665938bfc9affe4