Make the canvas-only message low priority

BUG:440400
(cherry picked from commit fd4a67f848b6d1b4b9e805d10d337a052afd54fc)